[package]
name = "implot"
version = "0.4.0"
edition = "2018"
authors = ["Sandro Merkli", "implot-rs contributors"]
description = "Rust bindings to https://github.com/epezent/implot"
homepage = "https://github.com/4bb4/implot-rs"
repository = "https://github.com/4bb4/implot-rs"
license = "MIT/Apache-2.0"
categories = ["gui", "api-bindings"]
readme = "README.md"

[dependencies]
implot-sys = { version = "0.4.0", path = "implot-sys" }
imgui = { version = "0.11.0", features=["docking", "tables-api"] }

[workspace]
members = [
    "implot-sys",
]

exclude = [
    "implot-sys-bindgen",
    "implot-examples",
    "implot-wgpu-examples",
]
